# tim

./: .gitignore  CMakeLists.txt  README.md  TyrianIM.def  themes.md
cmake/: gen_nyan_frames.sh
docs/superpowers/plans/: 2026-05-09-message-date-labels.md  2026-05-10-nyan-cat-theme.md  2026-05-10-url-clickable-links.md
docs/superpowers/specs/: 2026-05-09-message-date-labels-design.md  2026-05-09-pin-conversations-design.md  2026-05-10-nyan-cat-theme-design.md  2026-05-10-url-clickable-links-design.md
include/mumble/: Mumble.h
include/nexus/: Nexus.h
plans/: 2026-05-10-draft-notes-unread.md  prompt_hoard_and_seek.md  prompt_mission_finder.md
src/: ChatLinks.cpp  ChatLinks.h  ChatManager.cpp  ChatManager.h  GW2API.cpp  GW2API.h  WhisperHook.cpp  WhisperHook.h  dllmain.cpp  floatingc64.h  floatingcandle.h  floatingcat.h  floatingcharr.h  floatingfish.h  floatingjellyfish.h  floatingtiara.h
